# src/routes/auth.ts
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import { validator } from "../middleware/schemaValidator";
-import { loginValidationSchema } from "../middleware/schema/login";
+import { loginValidationSchema, refreshToken } from "../middleware/schema/login";
 import { LoginController } from "../controllers/login";
 import { registerValidationSchema } from "../middleware/schema/register";
 import { RegisterController } from "../controllers/register";
@@ -42,6 +42,13 @@ auth_router.post(
   loginValidationSchema,
   validator,
   loginController.login
+);
+
+auth_router.post(
+  "/refresh-token",
+  refreshToken,
+  validator,
+  loginController.generateRefreshToken
 );
 
 // Forgot Password
